--- a/kracker/package.json
+++ b/kracker/package.json
@@ -19,7 +19,7 @@
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.90.0",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.19",
